<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewGoalScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.ViewSpecificGoalActivity">

    <at.markushi.ui.CircleButton
...
        app:cb_color="#D81B60"
        app:cb_pressedRingWidth="12dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startGoal"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorAccent"
        android:onClick="startGoal"
        android:text="Start Goal"
...
